# ai-journal-api

./: .gitignore  Makefile  pyproject.toml
api/: __main__.py  core.py
src/api/: core.py  models.py
src/api/prompts/: 00.md  01.md
test/: test_core.py
test/data/: openai.json  output.json
