[project]
name = "ai-journal-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.12.0",
    "dotenv>=0.9.9",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "typer>=0.21.1",
]
